tdf#148103 SwNavigator: fix outline levels shown

fixes regression introduced in commit
3771a81060f9e1f60ada37c3b7fa0a51b3042952

Change-Id: Ie9a839f0de32177f06bd47a204c55b38eb9371f2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132533
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>